--- a/app/src/main/res/layout/activity_edit_word.xml
+++ b/app/src/main/res/layout/activity_edit_word.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:text="@string/button_save"
+        android:text="@string/button_edit"
         android:textColor="@color/buttonLabel" />
 
 </LinearLayout>
