--- a/app/src/main/res/layout/activity_edit_word.xml
+++ b/app/src/main/res/layout/activity_edit_word.xml
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/edit_word"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/big_padding"
+        android:layout_marginBottom="@dimen/big_padding"
         android:fontFamily="sans-serif-light"
         android:hint="@string/hint_word"
         android:inputType="textAutoComplete"
         android:padding="@dimen/small_padding"
-        android:layout_marginBottom="@dimen/big_padding"
-        android:layout_marginTop="@dimen/big_padding"
         android:textSize="18sp" />
+
+    <ImageView
+        android:id="@+id/IVPreviewImage"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:layout_height="300dp" />
+
+    <Button
+        android:id="@+id/BSelectImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Load Image" />
 
     <Button
         android:id="@+id/button_save"
@@ -21,6 +34,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:text="@string/button_edit"
+        android:layout_marginTop="20dp"
         android:textColor="@color/buttonLabel" />
 
 </LinearLayout>
